--- a/templates/home.html
+++ b/templates/home.html
@@ -52,7 +52,7 @@
           </TR>
           <TR>
           <TD>Direct Bilirubin</TD>
-          <TD><Input Type="Text" Name="Direct Bilirubin" Placeholder="D" Required="Required"></TD>
+          <TD><Input type="Text" Name="Direct Bilirubin" Placeholder="D" Required="Required"></TD>
           </TR>
           <TR>
           <TD>Alkaline Phosphotase</TD>
