--- a/templates/home.html
+++ b/templates/home.html
@@ -82,6 +82,7 @@
               
       <p><Input type="Submit" Value="Predict" Name="B1" Class="btn"></p>
       </form>  
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> 
               
       {{ prediction_text }}
               
