--- a/templates/home.html
+++ b/templates/home.html
@@ -79,8 +79,9 @@
           <TD><Input type="Text" Name="Albumin and Globulin Ratio" Placeholder="J" Required="Required"></TD>
           </TR>
         </Table>
-              
-      <p><Input type="Submit" Value="Predict" Name="B1" Class="btn"></p>
+        
+        <Button type="Submit" class="btn">Predict</Button>     
+    
       </form>  
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> 
               
