--- a/templates/home.html
+++ b/templates/home.html
@@ -40,43 +40,43 @@
         <Table Border="0">
           <TR>
           <TD>Age</TD>
-          <TD><Input type="Text" Name="Age" Placeholder="A" Required="Required"></TD>
+          <TD><Input type="Text" Name="Age" Placeholder="-" Required="Required"></TD>
           </TR>
           <TR>
           <TD>Gender</TD>
-          <TD><Input type="Text" Name="Gender" Placeholder="B" Required="Required"></TD>
+          <TD><Input type="Text" Name="Gender" Placeholder="-" Required="Required"></TD>
           </TR>
           <TR>
           <TD>Total Bilirubin</TD>
-          <TD><Input type="Text" Name="Total Bilirubin" Placeholder="C" Required="Required"></TD>
+          <TD><Input type="Text" Name="Total Bilirubin" Placeholder="-" Required="Required"></TD>
           </TR>
           <TR>
           <TD>Direct Bilirubin</TD>
-          <TD><Input type="Text" Name="Direct Bilirubin" Placeholder="D" Required="Required"></TD>
+          <TD><Input type="Text" Name="Direct Bilirubin" Placeholder="-" Required="Required"></TD>
           </TR>
           <TR>
           <TD>Alkaline Phosphotase</TD>
-          <TD><Input type="Text" Name="Alkaline Phosphotase" Placeholder="E" Required="Required"></TD>
+          <TD><Input type="Text" Name="Alkaline Phosphotase" Placeholder="-" Required="Required"></TD>
           </TR>
           <TR>
           <TD>Alamine Aminotransferase</TD>
-          <TD><Input type="Text" Name="Alamine Aminotransferase" Placeholder="F" Required="Required"></TD>
+          <TD><Input type="Text" Name="Alamine Aminotransferase" Placeholder="-" Required="Required"></TD>
           </TR>
           <TR>
           <TD>Aspartate Aminotransferase</TD>
-          <TD><Input type="Text" Name="Aspartate Aminotransferase" Placeholder="G" Required="Required"></TD>
+          <TD><Input type="Text" Name="Aspartate Aminotransferase" Placeholder="-" Required="Required"></TD>
           </TR>
           <TR>
           <TD>Total Protiens</TD>
-          <TD><Input type="Text" Name="Total Protiens" Placeholder="H" Required="Required"></TD>
+          <TD><Input type="Text" Name="Total Protiens" Placeholder="-" Required="Required"></TD>
           </TR>
           <TR>
           <TD>Albumin</TD>
-          <TD><Input type="Text" Name="Albumin" Placeholder="I" Required="Required"></TD>
+          <TD><Input type="Text" Name="Albumin" Placeholder="-" Required="Required"></TD>
           </TR>
           <TR>
           <TD>Albumin and Globulin Ratio</TD>
-          <TD><Input type="Text" Name="Albumin and Globulin Ratio" Placeholder="J" Required="Required"></TD>
+          <TD><Input type="Text" Name="Albumin and Globulin Ratio" Placeholder="-" Required="Required"></TD>
           </TR>
         </Table>
         
