--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
     <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>LIVER CANCER WEBSITE</title>
 </head>
 
@@ -84,9 +84,8 @@
     
       </form>  
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> 
-              
-      {{ prediction_text }}
-              
+                          
  </div>
+        {{ prediction_text }}             
 </body>
 </html>
