--- a/style.css
+++ b/style.css
@@ -1,132 +1,131 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;900&display=swap');
-
 *{
   margin: 0;
-  padding: 0;
+  padding: 0;  
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
 }
 
-/*-------------------------------------------------------------------------NAVIGATION BAR------------------------------------------------------------------------------*/
+/*-------------------------------------------------------------------------- NAVIGATION BAR ----------------------------------------------------------------------------------*/
 
 .body
 {
-  scroll-behavior: smooth;
-  overflow-x: hidden;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 .header
 {
-  width: 100%;
-  height: 100vh;
+    width: 100%;
+    height: 100vh;
 }
+
 .logoimg
 {
-  position:absolute;
-  z-index:-1;
-  height: 10px;
-  width: 290px;
-  padding-top: 2%;
-  padding-bottom: 2%;
+    height: 60px;
+    width: 290px;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
+
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap");
-:root 
-{
-  --easing: cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-.material-symbols-outlined 
-{
-  font-size: 24px;
-  font-variation-settings: "FILL" 0, "wght" 200, "GRAD" 0, "opsz" 40;
-  transition: transform 0.2s ease-in-out, color 0.2s ease-in-out;
-}
-
-.bottom-bar 
-{
-  position: fixed;
-  z-index: 10000;
-  top: 0;
-  width: 100%;
-  height: 56px;
-  background: black;
-  filter: drop-shadow(0px 0px 6px rgba(0, 0, 0, 0.1));
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.bottom-bar__list {
-  flex-basis: 32rem;
-  display: flex;
-  position: relative;
-  cursor: pointer;
-}
-   
-.bottom-bar__link {
-  color: #ffffff;
-  flex: 1;
-  font-size: 0.675rem;
-  font-weight: 300;
-  letter-spacing: 0.025rem;
-  font-family: "Roboto", sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 0.25rem;
-  z-index: 2;
-
-}
-
-/* .bottom-bar_link:hover, .bottom-barlink:focus, .bottom-bar_link:active {
-    animation-delay: 0s, .3s;
-    animation-direction: normal, alternate;
-    animation-duration: .3s, 1.5s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1, infinite;
-    animation-name: hover-bob-float, hover-bob;
-    animation-timing-function: ease-out, ease-in-out;
-    cursor: pointer;
+:root {
+    --easing: cubic-bezier(0.645, 0.045, 0.355, 1);
   }
-  @keyframes hover-ab {
-    0% {
-      transform: translateY(6px);
-    }
-    50% {
-      transform: translateY(-3px);
-    }
-    100% {
-      transform: translateY(6px);
-    }
-  }
-  @keyframes hover-bob-float {
-    100% {
-      transform: translateY(6px);
-    }
-  }  */
- 
-  .bottom-bar_link:hover, .bottom-barlink:focus, .bottom-bar_link:active 
+  .material-symbols-outlined 
   {
-    animation: hover-pulse 1s linear infinite !important;
-    cursor: pointer;
+    font-size: 24px;
+    font-variation-settings: "FILL" 0, "wght" 200, "GRAD" 0, "opsz" 40;
+    transition: transform 0.2s ease-in-out, color 0.2s ease-in-out;
   }
   
-  @keyframes hover-pulse {
-    25% {
-      transform: scale(1.1);
-    }
-    75% {
-      transform: scale(0.9);
-    }
+  .bottom-bar 
+  {
+    position: fixed;
+    z-index: 10000;
+    top: 0;
+    width: 100%;
+    height: 56px;
+    background: black;
+    filter: drop-shadow(0px 0px 6px rgba(0, 0, 0, 0.1));
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .bottom-bar__list 
+  {
+    flex-basis: 32rem;
+    display: flex;
+    position: relative;
+    cursor: pointer;
+  }
+      
+  .bottom-bar__link 
+  {
+    color: #ffffff;
+    flex: 1;
+    font-size: 0.675rem;
+    font-weight: 300;
+    letter-spacing: 0.025rem;
+    font-family: "Roboto", sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0.25rem;
+    z-index: 2;
   }
 
-/*------------------------------------------------------------------------FORM LAYOUT----------------------------------------------------------------------------------*/
+  /* .bottom-bar_link:hover, .bottom-barlink:focus, .bottom-bar_link:active 
+  {
+      animation-delay: 0s, .3s;
+      animation-direction: normal, alternate;
+      animation-duration: .3s, 1.5s;
+      animation-fill-mode: forwards;
+      animation-iteration-count: 1, infinite;
+      animation-name: hover-bob-float, hover-bob;
+      animation-timing-function: ease-out, ease-in-out;
+      cursor: pointer;
+    }
+    @keyframes hover-ab {
+      0% {
+        transform: translateY(6px);
+      }
+      50% {
+        transform: translateY(-3px);
+      }
+      100% {
+        transform: translateY(6px);
+      }
+    }
+    @keyframes hover-bob-float {
+      100% {
+        transform: translateY(6px);
+      }
+    }  */
+   
+    .bottom-bar_link:hover, .bottom-barlink:focus, .bottom-bar_link:active 
+    {
+      animation: hover-pulse 1s linear infinite;
+      cursor: pointer;
+    }
+    
+    @keyframes hover-pulse 
+    {
+      25% {
+        transform: scale(1.1);
+      }
+      75% {
+        transform: scale(0.9);
+      }
+    }
+
+  /*------------------------------------------------------------------------FORM LAYOUT----------------------------------------------------------------------------------*/
 
 .bg-img 
 {
      background-image: url("https://assets.technologynetworks.com/production/dynamic/images/content/322699/hepatitis-c-drugs-reduce-liver-related-deaths-by-46-322699-640x360.jpg");
-     min-height: 900px;
-     margin-top: 58px;
+     min-height: 920px;
+     margin-top: 57px;
 
     /* Center and scale the image nicely */
     background-position: center;
@@ -140,8 +139,8 @@
   {
     position: relative;
     align-content: center;
-    margin-left: 530px;
-    max-width: 455px;
+    margin-left: 535px;
+    max-width: 425px;
     padding: 15px;
     background-color: white;
   }
@@ -149,9 +148,9 @@
   /* Full-width input fields */
     input[type=text], input[type=text] 
     {
-    width: 105%;
-    padding: 10px;
-    margin: 3px 0 10px 0;
+    width: 100%;
+    padding: 15px;
+    margin: 4px 0 10px 0;
     border: 0cap;
     background: #f1f1f1; 
   }
@@ -165,13 +164,13 @@
   /* Set a style for the submit button */
   .btn 
   {
-    background-color: rgb(10, 10, 132);
+    background-color: rgba(255,65,54,255);
     color: white;
     padding: 16px 20px;
     border: black;
     cursor: pointer;
     width: 100%;
-    opacity: 0.8;
+    opacity: 0.9;
   }
   
   .btn:hover 
@@ -179,7 +178,7 @@
     opacity: 10;
   }
 
-  /*------------------------------------------------------------------------POP UP BOX----------------------------------------------------------------------------------*/
+/*-------------------------------------------------------------------------- POP UP BOX ----------------------------------------------------------------------------------*/
    
 .box 
 {
@@ -194,9 +193,9 @@
 {
   background-color: rgba(255,65,54,255);
   font-size: 1em;
-  padding: 4px;
+  padding: 6px;
   color: #fff;
-  border: 2px solid whitesmoke;
+  border: 2px solid wheat;
   border-radius: 50px;
   text-decoration: none;
   cursor: pointer;
@@ -230,7 +229,7 @@
 
   .popup 
   {
-    margin: 195px auto;
+    margin: 185px auto;
     padding: 20px;
     background: #fff;
     border-radius: 1px;
@@ -286,3 +285,13 @@
     color: #ffffff;
     position: relative;
   }
+
+  h1
+  {
+    font-weight: lighter;
+    font-size: x-large;
+    text-align: center;
+    font-family: Tahoma, Arial, sans-serif;
+    color: #000000;
+    position: relative;
+  } 
